It seems that magnolia jars are not in a default public repository.

--- a/pom.xml
+++ b/pom.xml
@@ -200,4 +200,11 @@
     </repository>
   </distributionManagement>
 
+  <repositories>
+    <repository>
+      <id>magnolia-nexus</id>
+      <url>http://nexus.magnolia-cms.com/content/groups/public</url>
+    </repository>
+  </repositories>
+
 </project>
