Better name and comments.

--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 
   <groupId>nl.vpro</groupId>
   <artifactId>jsr107-magnolia</artifactId>
-  <name></name>
+  <name>JSR107-Magnolia</name>
   <version>1.0-SNAPSHOT</version>
   <inceptionYear>2016</inceptionYear>
-  <description>A Hibernate's Criteria-like API to programmatically generate JCR queries</description>
+  <description>JSR-17 caching for the Magnolia CMS</description>
   <url>https://github.com/vpro/jsr107-magnolia</url>
 
   <licenses>
@@ -111,7 +111,6 @@
       <artifactId>magnolia-core</artifactId>
       <version>${magnolia.version}</version>
     </dependency>
-
     <dependency>
       <groupId>info.magnolia.cache</groupId>
       <artifactId>magnolia-cache-core</artifactId>
