--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,18 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.18</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
       <version>${magnolia.version}</version>
@@ -121,6 +133,7 @@
       <artifactId>magnolia-cache-core</artifactId>
       <version>${magnolia.cache.version}</version>
     </dependency>
+
   </dependencies>
 
   <properties>
@@ -128,7 +141,7 @@
     <slf4j.version>1.7.13</slf4j.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <magnolia.version>5.4.4</magnolia.version>
-    <magnolia.cache.version>5.4.2</magnolia.cache.version>
+    <magnolia.cache.version>5.4.3</magnolia.cache.version>
   </properties>
 
 
