synched ehcache version with magnolia.

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <version>1.0.1</version>
     </dependency>
     <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>2.10.0</version> <!-- synced version with magnolia's -->
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>${slf4j.version}</version>
