--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
           <additionalparam>-Xdoclint:none</additionalparam>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -145,9 +149,10 @@
   <properties>
     <jcr.version>2.0</jcr.version>
     <slf4j.version>1.7.13</slf4j.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <magnolia.version>5.4.5</magnolia.version>
     <magnolia.cache.version>5.4.4</magnolia.cache.version>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
 
