--- a/pom.xml
+++ b/pom.xml
@@ -129,8 +129,13 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>1.10.18</version>
+      <version>1.10.19</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.4.0</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
