Generalized the NodeAwareCacheKeyGenerator to a more generic MgnlObjectCacheKeyGenerator.

--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
   <properties>
     <jcr.version>2.0</jcr.version>
     <slf4j.version>1.7.22</slf4j.version>
-    <magnolia.version>5.5.2</magnolia.version>
-    <magnolia.cache.version>5.5.2</magnolia.cache.version>
+    <magnolia.version>5.5.3</magnolia.version>
+    <magnolia.cache.version>5.5.3</magnolia.cache.version>
     <junit.version>4.12</junit.version>
-    <mockito.version>2.7.14</mockito.version>
-    <lombok.version>1.16.12</lombok.version>
+    <mockito.version>2.7.20</mockito.version>
+    <lombok.version>1.16.16</lombok.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -169,6 +169,13 @@
       <groupId>info.magnolia.cache</groupId>
       <artifactId>magnolia-cache-ehcache</artifactId>
       <version>${magnolia.cache.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-core</artifactId>
+      <version>${magnolia.version}</version>
+      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
