--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,16 @@
     <ehcache.version>3.3.0</ehcache.version> <!-- should be in sync with version of magnolia.cache -->
 
     <junit.version>4.12</junit.version>
-    <mockito.version>2.17.0</mockito.version>
-    <lombok.version>1.16.20</lombok.version>
+    <mockito.version>2.23.4</mockito.version>
+    <lombok.version>1.18.4</lombok.version>
 
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <prerequisites>
+    <maven>3.1</maven>
+  </prerequisites>
 
   <build>
     <defaultGoal>install</defaultGoal>
@@ -71,7 +74,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -80,7 +83,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>3.1.0</version>
         <configuration>
           <archive>
             <manifestEntries>
@@ -100,10 +103,11 @@
       </plugin>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1</version>
         <configuration>
           <failOnError>false</failOnError>
-          <additionalparam>-Xdoclint:none</additionalparam>
+          <doclint>none</doclint>
+          <additionalJOption>-quiet</additionalJOption>
         </configuration>
       </plugin>
       <plugin>
@@ -150,7 +154,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.9.1</version>
+      <version>3.11.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
