--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
       <id>mihxil</id>
       <name>Michiel Meeuwissen</name>
       <email>michiel.meeuwissen+github@gmail.com</email>
-      <url>http://www.meeuw.org</url>
+      <url>https://meeuw.org</url>
       <organization>VPRO</organization>
       <organizationUrl>https://github.com/vpro/</organizationUrl>
       <roles>
@@ -29,7 +29,6 @@
         <role>developer</role>
       </roles>
       <timezone>Europe/Amsterdam</timezone>
-
     </developer>
   </developers>
 
