--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,14 @@
     <jcr.version>2.0</jcr.version>
     <slf4j.version>1.7.25</slf4j.version>
 
-    <magnolia.version>5.5.12</magnolia.version>
-    <magnolia.cache.version>5.5.7</magnolia.cache.version>
+    <magnolia.version>5.5.9</magnolia.version>
+    <magnolia.cache.version>5.5.8</magnolia.cache.version>
     <ehcache.version>3.3.0</ehcache.version> <!-- should be in sync with version of magnolia.cache -->
 
     <junit.version>4.12</junit.version>
     <mockito.version>2.23.4</mockito.version>
     <lombok.version>1.18.4</lombok.version>
+    <assertj.version>3.11.1</assertj.version>
 
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -141,7 +142,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -153,7 +154,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.11.1</version>
+      <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
