--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,10 @@
     <magnolia.cache.version>5.6.2</magnolia.cache.version>
     <ehcache.version>3.3.0</ehcache.version> <!-- should be in sync with version of magnolia.cache -->
 
-    <junit.version>4.12</junit.version>
-    <mockito.version>2.28.2</mockito.version>
-    <lombok.version>1.18.8</lombok.version>
-    <assertj.version>3.12.2</assertj.version>
+    <junit.version>5.6.0-M1</junit.version>
+    <mockito.version>3.1.0</mockito.version>
+    <lombok.version>1.18.10</lombok.version>
+    <assertj.version>3.14.0</assertj.version>
 
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -159,9 +159,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -269,6 +268,17 @@
       </build>
     </profile>
   </profiles>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <distributionManagement>
     <snapshotRepository>
