--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <licenses>
     <license>
       <name>GPLv3</name>
-      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+      <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
     </license>
   </licenses>
 
@@ -41,15 +41,15 @@
 
   <properties>
     <jcr.version>2.0</jcr.version>
-    <slf4j.version>1.7.25</slf4j.version>
+    <slf4j.version>1.7.36</slf4j.version>
 
-    <magnolia.version>6.2.12</magnolia.version>
-    <magnolia.cache.version>5.9.2</magnolia.cache.version>
+    <magnolia.version>6.2.16</magnolia.version>
+    <magnolia.cache.version>5.9.4</magnolia.cache.version>
     <ehcache.version>3.7.1</ehcache.version> <!-- should be in sync with version of magnolia.cache -->
-    <junit.version>5.8.0-M1</junit.version>
-    <mockito.version>3.9.0</mockito.version>
-    <lombok.version>1.18.20</lombok.version>
-    <assertj.version>3.19.0</assertj.version>
+    <junit.version>5.8.2</junit.version>
+    <mockito.version>4.3.1</mockito.version>
+    <lombok.version>1.18.22</lombok.version>
+    <assertj.version>3.22.0</assertj.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
