added checker dependency

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,12 @@
       <version>${lombok.version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.checkerframework</groupId>
+      <artifactId>checker-qual</artifactId>
+      <version>3.21.3</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 
