--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,17 +18,27 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+
+    - name: Create settings.xml
+      uses: s4u/maven-settings-action@v2
+      with:
+        servers: '[{"id": "vpro-ossrh", "username": "vpro", "password": "${{secrets.SONATYPE_PASSWORD}}"}]'
+    - name: Import GPG key
+      uses: crazy-max/ghaction-import-gpg@v3
+      with:
+        gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
+        passphrase: ${{ secrets.GPG_SECRET_KEY_PASSPHRASE }}
     - name: Build with Maven
       run: mvn -B -fn
-    - name: codecov
-      run: bash <(curl -s https://codecov.io/bash)
-      if: ${{ github.event_name == 'push' }}
+    - name: Publish to codecov
+      uses: codecov/codecov-action@v2
+      continue-on-error: true
     - name: Publish Test Report
       uses: scacap/action-surefire-report@v1
       if: ${{ github.event_name == 'push' }}
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Deploy with Maven
-      run: OSSRH_PASSWORD=${{ secrets.OSSRH_PASSWORD }} mvn -B -Ddeploy  -DskipTests=true -s $GITHUB_WORKSPACE/.github/settings.xml -Dgpg.skip=true
+      run: OSSRH_PASSWORD=${{ secrets.OSSRH_PASSWORD }} mvn -B -Pdeploy  deploy -DskipTests=true -s $GITHUB_WORKSPACE/.github/settings.xml -Dgpg.skip=false
       if: ${{ github.event_name == 'push' }}
 
