--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,10 @@
     </developer>
   </developers>
 
+
   <scm>
-    <connection>scm:git:git://git@github.com/vpro/jsr107-magnolia.git</connection>
-    <developerConnection>scm:git:git@github.com:vpro/jsr107-magnolia.git</developerConnection>
+    <connection>scm:git:${project.scm.url}</connection>
+    <developerConnection>scm:git:${project.scm.url}</developerConnection>
     <url>https://github.com/vpro/jsr107-magnolia</url>
     <tag>HEAD</tag>
   </scm>
