--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       MAVEN_OPTS: -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
@@ -24,7 +24,7 @@ jobs:
       - name: Create settings.xml
         uses: s4u/maven-settings-action@v2
         with:
-          servers: '[{"id": "vpro-ossrh-release", "username": "vpro", "password": "${{secrets.SONATYPE_PASSWORD}}"}]'
+          servers: '[{"id": "vpro-ossrh", "username": "vpro", "password": "${{secrets.SONATYPE_PASSWORD}}"}]'
       - uses: crazy-max/ghaction-import-gpg@v3
         with:
           gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
