--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
             <version>1.6.8</version>
             <extensions>true</extensions>
             <configuration>
-              <serverId>vproossrh</serverId>
+              <serverId>vpro-ossrh-release</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
               <autoReleaseAfterClose>true</autoReleaseAfterClose>
             </configuration>
