--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>nl.vpro</groupId>
   <artifactId>jsr107-magnolia</artifactId>
   <name>JSR107-Magnolia</name>
-  <version>1.21-SNAPSHOT</version>
+  <version>1.21</version>
   <inceptionYear>2016</inceptionYear>
   <description>JSR-107 caching for the Magnolia CMS</description>
   <url>https://github.com/vpro/jsr107-magnolia</url>
@@ -37,7 +37,7 @@
     <connection>scm:git:${project.scm.url}.git</connection>
     <developerConnection>scm:git:${project.scm.url}.git</developerConnection>
     <url>https://github.com/vpro/jsr107-magnolia</url>
-    <tag>HEAD</tag>
+    <tag>1.21</tag>
   </scm>
 
   <properties>
